--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
 <html >
-<head>
+    <div class="container">
+        <div class="The-Inside-Scoop"></div>
+        <div class="Join-Now-\@-"></div>
+        <div class="Access-"></div>
+      </div>
+</html>
    
