--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
-<html >
-    <div class="container">
-        <div class="The-Inside-Scoop"></div>
-        <div class="Join-Now-\@-"></div>
-        <div class="Access-"></div>
-      </div>
+<html>
+<head>
+<style>
+body {
+  background-color: #FACAF1;
+}
+</style>
+</head>
+<body>
+
+<h1>The Inside Scoop</h1>
+
+<p>This page has a light blue background color!</p>
+
+</body>
 </html>
+
    
