--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ body {
 
 <h1>The Inside Scoop</h1>
 
-<p>This page has a light blue background color!</p>
+<p>Access to: 
+  The background of eye scream scoop, the scoop of the day & upcoming releases & Drops</p>
 
 </body>
 </html>
