--- a/index.html
+++ b/index.html
@@ -2,19 +2,22 @@
 <html>
 <head>
 <style>
-body {
+div {
   background-color: #FACAF1;
+  width: 300px;
+  border: 15px solid #ffffff;
+  padding: 50px;
+  margin: 20px;
 }
 </style>
 </head>
 <body>
 
-<h1>The Inside Scoop</h1>
+<h2>The Inside Scoop</h2>
 
-<p>Access to: 
-  The background of eye scream scoop, the scoop of the day & upcoming releases & Drops</p>
+
+<div>Access to: 
+  The background of eye scream scoop, the scoop of the day & upcoming releases & Drops</div>
 
 </body>
 </html>
-
-   
