--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <h1>The Inside Scoop</h1>
 <style>
 div {
   background-color: #FACAF1;
   width: 300px;
-  border: 15px solid #ffffff;
+  border: 15px solid #FACAF1;
   padding: 50px;
   margin: 20px;
 }
@@ -13,7 +14,7 @@ div {
 </head>
 <body>
 
-<h2>The Inside Scoop</h2>
+<h2>Benefits of the Inside Scoop</h2>
 
 
 <div>Access to: 
