--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style>
+    body {
+      background-color: #FACAF1;
+    }
+    </style>
+    </head>
+    <body>
   <h1>The Inside Scoop</h1>
 <style>
 div {
   background-color: #FACAF1;
   width: 300px;
-  border: 15px solid #FACAF1;
+  border: 15px solid #ffffff;
   padding: 50px;
   margin: 20px;
 }
@@ -21,4 +28,21 @@ div {
   The background of eye scream scoop, the scoop of the day & upcoming releases & Drops</div>
 
 </body>
+<head>
+  <style>
+  div {
+    background-color: #FACAF1;
+    width: 300px;
+    border: 15px solid #ffffff);
+    padding: 50px;
+    margin: 20px;
+  }
+  </style>
+  </head>
+  <body>
+  
+  
+  
+  
+  <div>Join now @ eyescreamscoop.com/insidescoop</div>
 </html>
