--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     <div class="dropdown">
       <span>FLAVORS</span>
       <div class="dropdown-content">
-      <p>The History of Eye Scream Scoop
+      <p><a href="https://www.eyescreamscoop.com">The History of Eye Scream Scoop</a></p>
         
-       <p>Hisotry (cont)</p> 
+       <p><a href="https://eyescreamscoop.com">Hisotry (cont)</a></p> 
 
-        <p>Scoop of the Day</p>
+        <p><a href="https://eyescreamscoop.com">Scoop of the Day</a></p>
 
-        <p>Upcoming Drops and Deadlines</p>
+        <p><a href="https://eyescreamscoop.com">Upcoming Drops and Deadlines</a></p>
       </div>
     </div>
 <head>
