--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     }
     </style>
     </head>
+    
     <body>
     
     <h1>The Inside Scoop</h1>
@@ -40,6 +41,21 @@
         <p><a href="https://eyescreamscoop.com">Upcoming Drops and Deadlines</a></p>
       </div>
     </div>
+
+<!DOCTYPE html>
+<html>
+  
+<head>
+    <title>
+        HTML img alt Attribute
+    </title>
+</head>
+  
+    <img src=
+"Attachment-1.png" 
+         alt="Eyescreamscoop Bomb Pop" 
+         align="right">
+</body>
 <head>
   <style>
     body {
