--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     <div class="dropdown">
       <span>FLAVORS</span>
       <div class="dropdown-content">
-      <p><a href="https://www.eyescreamscoop.com">The History of Eye Scream Scoop</a></p>
+      <p><a href="history1.html">The History of Eye Scream Scoop</a></p>
         
-       <p><a href="https://eyescreamscoop.com">Hisotry (cont)</a></p> 
+       <p><a href="history2.html">Hisotry (cont)</a></p> 
 
-        <p><a href="https://eyescreamscoop.com">Scoop of the Day</a></p>
+        <p><a href="scoopday.html">Scoop of the Day</a></p>
 
-        <p><a href="https://eyescreamscoop.com">Upcoming Drops and Deadlines</a></p>
+        <p><a href="upcomingdrops.html">Upcoming Drops and Deadlines</a></p>
       </div>
     </div>
 
@@ -86,11 +86,11 @@ div {
     background-color: #FACAF1;
     width: 300px;
     border: 15px solid #ffffff);
-    padding: 50px;
-    margin: 20px;
-  }
+    <padding>50px;
+    <margin> 20px;
+  
   </style>
-  </head>
+
   <body>
     
   
@@ -99,3 +99,4 @@ div {
   
   <div>Join now @ eyescreamscoop.com/insidescoop</div>
 </html>
+
