--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@ div {
     background-color: #FACAF1;
     width: 300px;
     border: 15px solid #ffffff);
-    <padding>50px;
-    <margin> 20px;
+    padding:50px;
+    margin: 20px;
   
   </style>
 
