--- a/history1.html
+++ b/history1.html
@@ -59,16 +59,16 @@
 <head>
   <style>
     body {
-      background-color: #FACAF1;
+      background-color: #a7e6ff;
     }
     </style>
     </head>
     <body>
 <style>
 div {
-  background-color: #FACAF1;
+  background-color: #ffffff;
   width: 300px;
-  border: 15px solid #ffffff;
+  border: 15px solid #FACAF1;
   padding: 50px;
   margin: 20px;
 }
