--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ div {
     width: 300px;
     border: 15px solid #ffffff);
     padding:50px;
-    margin: 20px;
+    margin 20px;
   
   </style>
 
