--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <div class="dropdown">
       <span>FLAVORS</span>
       <div class="dropdown-content">
+        <p><a href="index.html"> Home </a></p>
+        
       <p><a href="history1.html">The History of Eye Scream Scoop</a></p>
         
        <p><a href="history2.html">Hisotry (cont)</a></p> 
