--- a/history2.html
+++ b/history2.html
@@ -32,7 +32,7 @@
     <div class="dropdown">
       <span>FLAVORS</span>
       <div class="dropdown-content">
-        <p><a href= "index.html"> Home</a></p>
+        <p><a href= "index.html"> Home</a></p>2
       <p><a href="history1.html">The History of Eye Scream Scoop</a></p>
         
        <p><a href="history2.html">Hisotry (cont)</a></p> 
@@ -60,16 +60,16 @@
 <head>
   <style>
     body {
-      background-color: #FACAF1;
+      background-color: #90ffcb;
     }
     </style>
     </head>
     <body>
 <style>
 div {
-  background-color: #FACAF1;
+  background-color: #ffffff
   width: 300px;
-  border: 15px solid #ffffff;
+  border: 15px solid #FACAF1;
   padding: 50px;
   margin: 20px;
 }
