--- a/scoopday.html
+++ b/scoopday.html
@@ -60,16 +60,16 @@
 <head>
   <style>
     body {
-      background-color: #FACAF1;
+      background-color: #ff5252;
     }
     </style>
     </head>
     <body>
 <style>
 div {
-  background-color: #FACAF1;
+  background-color: #ffffff;
   width: 300px;
-  border: 15px solid #ffffff;
+  border: 15px solid #FACAF1;
   padding: 50px;
   margin: 20px;
 }
