--- a/history1.html
+++ b/history1.html
@@ -22,6 +22,18 @@
     }
     </style>
     </head>
+    <!DOCTYPE html>
+<html>
+<head>
+<style>
+body {
+  font-family: "Brush Script MT", cursive;
+}
+</style>
+</head>
+<body>
+</html>
+
     
     <body>
     
