--- a/upcomingdrops.html
+++ b/upcomingdrops.html
@@ -23,6 +23,18 @@
     </style>
     </head>
     
+    <!DOCTYPE html>
+<html>
+<head>
+<style>
+body {
+  font-family: "Brush Script MT", cursive;
+}
+</style>
+</head>
+<body>
+
+  
     <body>
     
     <h1>The Inside Scoop</h1>
