--- a/history1.html
+++ b/history1.html
@@ -55,60 +55,187 @@ body {
       </div>
     </div>
 
+
 <!DOCTYPE html>
 <html>
-  
 <head>
-    <title>
-        HTML img alt Attribute
-    </title>
-</head>
-  
-    <img src=
-"Attachment-1.png" 
-         alt="Eyescreamscoop Bomb Pop" 
-         align="right">
-</body>
-<head>
-  <style>
-    body {
-      background-color: #a7e6ff;
-    }
-    </style>
-    </head>
-    <body>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-div {
-  background-color: #ffffff;
-  width: 300px;
-  border: 15px solid #FACAF1;
-  padding: 50px;
-  margin: 20px;
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #474e5d;
+  font-family: Helvetica, sans-serif;
+}
+
+/* The actual timeline (the vertical ruler) */
+.timeline {
+  position: relative;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+/* The actual timeline (the vertical ruler) */
+.timeline::after {
+  content: '';
+  position: absolute;
+  width: 6px;
+  background-color: white;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -3px;
+}
+
+/* Container around content */
+.container {
+  padding: 10px 40px;
+  position: relative;
+  background-color: inherit;
+  width: 50%;
+}
+
+/* The circles on the timeline */
+.container::after {
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  right: -17px;
+  background-color: white;
+  border: 4px solid #FF9F55;
+  top: 15px;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+/* Place the container to the left */
+.left {
+  left: 0;
+}
+
+/* Place the container to the right */
+.right {
+  left: 50%;
+}
+
+/* Add arrows to the left container (pointing right) */
+.left::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  top: 22px;
+  width: 0;
+  z-index: 1;
+  right: 30px;
+  border: medium solid white;
+  border-width: 10px 0 10px 10px;
+  border-color: transparent transparent transparent white;
+}
+
+/* Add arrows to the right container (pointing left) */
+.right::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  top: 22px;
+  width: 0;
+  z-index: 1;
+  left: 30px;
+  border: medium solid white;
+  border-width: 10px 10px 10px 0;
+  border-color: transparent white transparent transparent;
+}
+
+/* Fix the circle for containers on the right side */
+.right::after {
+  left: -16px;
+}
+
+/* The actual content */
+.content {
+  padding: 20px 30px;
+  background-color: white;
+  position: relative;
+  border-radius: 6px;
+}
+
+/* Media queries - Responsive timeline on screens less than 600px wide */
+@media screen and (max-width: 600px) {
+  /* Place the timelime to the left */
+  .timeline::after {
+  left: 31px;
+  }
+  
+  /* Full-width containers */
+  .container {
+  width: 100%;
+  padding-left: 70px;
+  padding-right: 25px;
+  }
+  
+  /* Make sure that all arrows are pointing leftwards */
+  .container::before {
+  left: 60px;
+  border: medium solid white;
+  border-width: 10px 10px 10px 0;
+  border-color: transparent white transparent transparent;
+  }
+
+  /* Make sure all circles are at the same spot */
+  .left::after, .right::after {
+  left: 15px;
+  }
+  
+  /* Make all right containers behave like the left ones */
+  .right {
+  left: 0%;
+  }
 }
 </style>
 </head>
 <body>
 
-<div>Access to: 
-  The background of eye scream scoop, the scoop of the day & upcoming releases & Drops</div>
+<div class="timeline">
+  <div class="container left">
+    <div class="content">
+      <h2>2015</h2>
+      <p>In September of 2015, three friends from Chicago began to ponder the question of “What makes a great clothing brand?” Going to school in the city, we were exposed to such a wide variety of fashion and felt that we three needed to get our own designs in the mix. Our next step was to design?! We needed something tangible yet unique to our take on the fashion zeitgeist.</p>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h2>2016</h2>
+      <p>After a long year of immersing ourselves in entrepreneurship lifestyle, graphic design platforms, and a plethora of merchandisers, the Eye Scream Scoop team finally was able to embark on this journey. Starting with a simple design, we needed to make something that grabbed the attention of anyone who laid eyes on it.</p>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <h2>2017</h2>
+      <p>Only two years after the inaugural year, the Eye Scream Scoop had finally created the perfect combination of uniqueness and attraction. Joining something playful and common like ice cream with an evil eye represents society and its focus and influence it has on the consumer. This juxtaposition of safe comfort food with the dark big brother eye represents more than just what we designers think. The great thing about this design is its ability to move the consumer in their own unique way. </p>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h2>2018</h2>
+      <p> 2018 was a big year for Eye Scream Scoop, it was our first time having tangible products and an inventory to work from. We had made around 250 tee shirts in the year of 2018, selling them in both black and white and all sizes, we were finally about to see our dream come to fruition. 2018 rewarded as well as punished us young entrepreneurs, rewarding us with an inventory and something to finally sell, but punished with the low demand that we hadn’t seen coming. </p>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <h2>2019</h2>
+      <p>Wanting to bounce back from a struggling year, the Eye Scream Scoop team needed to improve their social media awareness and content engagement. With the sour taste of 2018 in our mouths, we needed to generate more Eye Scream graphics, and go 100% into this project or we could see another year like 2018. Our turning point was fall 2019 when all three of us sat down to discuss where we want to see this company go in the future</p>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h2>2020</h2>
+      <p>As anyone who lived through it, 2020 was a strange year, consisting mostly of the quarantine, our team was challenged in how we responded to not only this sickness but also the bad taste from 2018. Thankfully we were stuck in our house so much that we had nothing else to do but brainstorm and create. Looking back on the COVID-19 dilemma and long quarantine, Eye Scream Scoop was able to create some of the best designs we have to offer. 2020 helping solidify our brand name and what made us different from other up-and-coming graphic designs companies.</p>
+    </div>
+  </div>
+</div>
 
 </body>
-<head>
-  <style>
-  div {
-    background-color: #FACAF1;
-    width: 300px;
-    border: 15px solid #ffffff);
-    padding: 50px;
-    margin: 20px;
-  
-  </style>
-  </head>
-  <body>
-    
-  
-  
-  
-  
-  <div>Join now @ eyescreamscoop.com/insidescoop</div>
 </html>
