--- a/scoopday.html
+++ b/scoopday.html
@@ -65,7 +65,7 @@ body {
 </head>
   
     <img src=
-"Attachment-1.png" 
+"Earth.PNG" 
          alt="Eyescreamscoop Bomb Pop" 
          align="right">
 </body>
