--- a/scoopday.html
+++ b/scoopday.html
@@ -32,6 +32,16 @@ body {
 }
 </style>
 </head>
+
+<!DOCTYPE html>
+<html>
+<body>
+
+<img src="Earth.PNG" align=right width="500" height="600">
+
+</body>
+</html>
+</body>
 <body>
 
     
@@ -55,20 +65,6 @@ body {
       </div>
     </div>
 
-<!DOCTYPE html>
-<html>
-  
-<head>
-    <title>
-        HTML img alt Attribute
-    </title>
-</head>
-  
-    <img src=
-"Earth.PNG" 
-         alt="Eyescreamscoop Bomb Pop" 
-         align="right">
-</body>
 <head>
   <style>
     body {
