--- a/history2.html
+++ b/history2.html
@@ -97,7 +97,7 @@ div {
   div {
     background-color: #FACAF1;
     width: 300px;
-    border: 15px solid #ffffff);
+    border: 15px solid #ffffff;
     padding: 50px;
     margin: 20px;
   
