--- a/scoopday.html
+++ b/scoopday.html
@@ -41,8 +41,6 @@ body {
     <body>
     
     <h1>The Inside Scoop</h1>
-    <h2>Benefits of the Inside Scoop</h2>
-    <p>Below are the pages accessible to those in the Eye Scream Scoop Community</p>
     
     <div class="dropdown">
       <span>FLAVORS</span>
@@ -58,7 +56,6 @@ body {
       </div>
     </div>
 
-    <!DOCTYPE html>
 
 
 <head>
@@ -79,12 +76,25 @@ div {
 }
 </style>
 </head>
+<style>
+  div {
+    background-color: #ffffff;
+    width: 300px;
+    border: 15px solid #FACAF1;
+    padding: 50px;
+    margin: 20px;
+  }
+  </style>
+  </head>
+  <body>
+  
+  
+  
+   
+  
+  <div>
+    Flavor of the Week 
+    <img src="Earth.PNG" align=center  width="250" height="350"
 
-<html>
-<body>
-
-<img src="Earth.PNG" align= right width="500" height="600">
-
-</body>
-</html>
+  </div>
 </body>
