--- a/index.html
+++ b/index.html
@@ -111,6 +111,6 @@ div {
   
   
   
-  <div><p><a href="eyescreamscoop.com/contact">Join now @ eyescreamscoop.com/insidescoop</a></p></div>
+  <div><p><a href="eyescreamscoop.com/contact/">Join now @ eyescreamscoop.com/insidescoop</a></p></div>
 </html>
 
