--- a/upcomingdrops.html
+++ b/upcomingdrops.html
@@ -10,7 +10,7 @@
     .dropdown-content {
       display: none;
       position: absolute;
-      background-color: #f9f9f9;
+      background-color: #FACAF1;
       min-width: 160px;
       box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
       padding: 12px 16px;
@@ -39,7 +39,7 @@ body {
     <h1>The Inside Scoop</h1>
     <h1>Upcoming Drops and Benefits</h1>
     
-    
+  
     <div class="dropdown">
       <span>FLAVORS</span>
       <div class="dropdown-content">
@@ -75,9 +75,9 @@ body {
 div {
   background-color: #FACAF1;
   width: 300px;
-  border: 15px solid #ffffff;
-  padding: 50px;
-  margin: 20px;
+  border: 0px solid #FACAF1;
+  padding: 30px;
+  margin: 10px;
 }
 </style>
 </head>
