--- a/index.html
+++ b/index.html
@@ -89,9 +89,10 @@ div {
 
 <div>Access to: 
   The background of eye scream scoop, the scoop of the day & upcoming releases & Drops</div>
-
+  <div><p><a href="http://eyescreamscoop.com/contact/">Join now @ eyescreamscoop.com/insidescoop</a></p></div>
 </body>
-<head>
+
+
   <style>
   div {
     background-color: #FACAF1;
@@ -99,15 +100,9 @@ div {
     border: 15px solid #ffffff);
     padding:50px;
     margin 20px;
-  
-  </style>
-
-  <body>
     
-  
-  
-  
-  
-  <div><p><a href="eyescreamscoop.com/contact/">Join now @ eyescreamscoop.com/insidescoop</a></p></div>
+  </style>
+</body>
+
 </html>
 
