--- a/index.html
+++ b/index.html
@@ -20,20 +20,18 @@
     .dropdown:hover .dropdown-content {
       display: block;
     }
-    </style>
-<style>
+
+    <link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
 body {
   font-family: "Brush Script MT", cursive;
 }
-</style>
-<style>
+
+
   body {
     background-color: #FACAF1;
   }
-  </style>
-  </head>
-  <body>
-<style>
+
+
 div {
 background-color: #FACAF1;
 width: 300px;
@@ -41,7 +39,6 @@ border: 15px solid #ffffff;
 padding: 50px;
 margin: 20px;
 }
-
 
 </style>
 
