--- a/upcomingdrops.html
+++ b/upcomingdrops.html
@@ -131,7 +131,7 @@ body {font-family: Verdana, sans-serif;}
   text-align: center;
   margin-bottom: 5px;
   font-size:12px;
-  color: #777;
+  color: #FACAF1;
 }
 
 .days li .active {
@@ -164,7 +164,7 @@ body {font-family: Verdana, sans-serif;}
     <li class="prev">&#10094;</li>
     <li class="next">&#10095;</li>
     <li>
-      August<br>
+      December<br>
       <span style="font-size:18px">2021</span>
     </li>
   </ul>
