--- a/upcomingdrops.html
+++ b/upcomingdrops.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
+  </head>
     <style>
+      
     .dropdown {
       position: relative;
       display: inline-block;
@@ -20,15 +23,14 @@
     .dropdown:hover .dropdown-content {
       display: block;
     }
-    </style>
-   
-    
+    @font-face{ 
+	font-family: 'MyWebFont';
+	src: url('WebFont.eot');
+	src: url('WebFont.eot?#iefix') format('embedded-opentype'),
+	     url('WebFont.woff') format('woff'),
+	     url('WebFont.ttf') format('truetype'),
+	     url('WebFont.svg#webfont') format('svg');
 
-
-<style>
-body {
-  font-family: "Brush Script MT", cursive;
-}
 </style>
 
 <body>
