--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
+    </head>
+    
     <style>
+      @font-face{ 
+	font-family: 'MyWebFont';
+	src: url('WebFont.eot');
+	src: url('WebFont.eot?#iefix') format('embedded-opentype'),
+	     url('WebFont.woff') format('woff'),
+	     url('WebFont.ttf') format('truetype'),
+	     url('WebFont.svg#webfont') format('svg');
+}
     .dropdown {
       position: relative;
       display: inline-block;
@@ -21,10 +32,9 @@
       display: block;
     }
 
-    <link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
-body {
-  font-family: "Brush Script MT", cursive;
-}
+   
+body { font-family: 'WebFont', Arial, sans-serif; }
+
 
 
   body {
