--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <body>
     <link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
+  </body>
     </head>
     
     <style>
@@ -31,11 +33,6 @@
     .dropdown:hover .dropdown-content {
       display: block;
     }
-
-   
-body { font-family: 'WebFont', Arial, sans-serif; }
-
-
 
   body {
     background-color: #FACAF1;
