--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
     <style>
       @font-face{ 
 	font-family: 'MyWebFont';
-	src: url('WebFont.eot');
-	src: url('WebFont.eot?#iefix') format('embedded-opentype'),
-	     url('WebFont.woff') format('woff'),
-	     url('WebFont.ttf') format('truetype'),
-	     url('WebFont.svg#webfont') format('svg');
+	src: url(meltdownmf-oeyd-webfont.woff);
+  font-style: normal;
+  font font-weight: 100;
 }
     .dropdown {
       position: relative;
@@ -51,7 +49,7 @@ margin: 20px;
 
     
     <body>
-    
+
     <h1>The Inside Scoop</h1>
     <h2>Benefits of the Inside Scoop</h2>
     <p>Below are the pages accessible to those in the Eye Scream Scoop Community</p>
