--- a/upcomingdrops.html
+++ b/upcomingdrops.html
@@ -29,7 +29,7 @@
 	src: url('WebFont.eot?#iefix') format('embedded-opentype'),
 	     url('WebFont.woff') format('woff'),
 	     url('WebFont.ttf') format('truetype'),
-	     url('WebFont.svg#webfont') format('svg');
+	     url('WebFont.svg#webfont') format('svg');}
 
 </style>
 
