--- a/scoopday.html
+++ b/scoopday.html
@@ -51,7 +51,7 @@ body {
 
   <style>
     body {
-      background-color: #ff5252;
+      background-color: #ffc252;
     }
     </style>
     </head>
@@ -124,7 +124,7 @@ return document.getElementById("result").innerHTML = '<img src="'+randomImage[nu
 
 </script>
 <body>
-<center><h2 style="color:green"> Random Image Generator </h2></center>
+<center><h2 style="color:#FACAF1"> Random Image Generator </h2></center>
 <h4> Click the button to generate and display random images on the webpage </h4>
 <!-- call user-defined getRandomImage function after 2 seconds -->  
 <button onclick = "setInterval(getRandomImage, 2000)"> Generate Image </button>
