--- a/scoopday.html
+++ b/scoopday.html
@@ -110,8 +110,8 @@ randomImage[0] = "TripleScoop.png";
 randomImage[1] = "Shamrock.png";
 randomImage[2] = "OvertheRainbow.png";
 randomImage[3] = "DoubleScoop.png";
-randomImage[4] = "https://wi.wallpapertip.com/wsimgs/156-1565522_puppies-desktop-wallpaper-desktop-background-puppies.jpg";
-randomImage[5] = "https://images.unsplash.com/photo-1501265976582-c1e1b0bbaf63?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60";
+randomImage[4] = "";
+randomImage[5] = "";
 
 //generate a number and provide to the image to generate randomly
 var number = Math.floor(Math.random()*randomImage.length);
@@ -125,12 +125,11 @@ return document.getElementById("result").innerHTML = '<img src="'+randomImage[nu
 <center><h2 style="color:#FACAF1"> Scoop of the Day Generator </h2></center>
 <h4> Click the button to generate and your different scoop possibilites </h4>
 <!-- call user-defined getRandomImage function after 2 seconds -->  
-<button onclick = "setInterval(getRandomImage, 2000)"> Generate Image </button>
+<button onclick = "setInterval(getRandomImage, 2000)"> Click here for Flavor </button>
 <br> <br>
-<span id="result" align="center"> </span> 
+<span id="result" align="right"> </span> 
   
 </body>  
-</html>
       </html>
   
 
