--- a/scoopday.html
+++ b/scoopday.html
@@ -106,11 +106,11 @@ function getRandomImage() {
 var randomImage = new Array();
 
 //insert the URL of images in array
-randomImage[0] = "TripleScoop.png";
+randomImage[0] = "eyescreamscoop-extension/TripleScoop.png";
 randomImage[1] = "Shamrock.png";
 randomImage[2] = "OvertheRainbow.png";
 randomImage[3] = "DoubleScoop.png";
-randomImage[4] = "";
+randomImage[14] = "";
 randomImage[5] = "";
 
 //generate a number and provide to the image to generate randomly
