--- a/scoopday.html
+++ b/scoopday.html
@@ -106,7 +106,7 @@ function getRandomImage() {
 var randomImage = new Array();
 
 //insert the URL of images in array
-randomImage[0] = "eyescreamscoop-extension/TripleScoop.png";
+randomImage[0] = "file:///Users/eligeleerd/Desktop/eyescreamscoop-extension/DoubleScoop.png";
 randomImage[1] = "Shamrock.png";
 randomImage[2] = "OvertheRainbow.png";
 randomImage[3] = "DoubleScoop.png";
