--- a/scoopday.html
+++ b/scoopday.html
@@ -107,9 +107,9 @@ var randomImage = new Array();
 
 //insert the URL of images in array
 randomImage[0] = "file:///Users/eligeleerd/Desktop/eyescreamscoop-extension/DoubleScoop.png";
-randomImage[1] = "Shamrock.png";
-randomImage[2] = "OvertheRainbow.png";
-randomImage[3] = "DoubleScoop.png";
+randomImage[1] = "file:////Users/eligeleerd/Desktop/eyescreamscoop-extension/Shamrock.PNG";
+randomImage[2] = "file:///Users/eligeleerd/Desktop/eyescreamscoop-extension/OvertheRainbow.PNG";
+randomImage[3] = "file:///Users/eligeleerd/Desktop/eyescreamscoop-extension/TripleScoop.png";
 randomImage[14] = "";
 randomImage[5] = "";
 
