--- a/scoopday.html
+++ b/scoopday.html
@@ -106,10 +106,10 @@ function getRandomImage() {
 var randomImage = new Array();
 
 //insert the URL of images in array
-randomImage[0] = "file:///Users/eligeleerd/Desktop/eyescreamscoop-extension/DoubleScoop.png";
-randomImage[1] = "file:////Users/eligeleerd/Desktop/eyescreamscoop-extension/Shamrock.PNG";
-randomImage[2] = "file:///Users/eligeleerd/Desktop/eyescreamscoop-extension/OvertheRainbow.PNG";
-randomImage[3] = "file:///Users/eligeleerd/Desktop/eyescreamscoop-extension/TripleScoop.png";
+randomImage[0] = "Desktop/eyescreamscoop-extension/DoubleScoop.png";
+randomImage[1] = "Desktop/eyescreamscoop-extension/Shamrock.PNG";
+randomImage[2] = "Desktop/eyescreamscoop-extension/OvertheRainbow.PNG";
+randomImage[3] = "Desktop/eyescreamscoop-extension/TripleScoop.png";
 randomImage[14] = "";
 randomImage[5] = "";
 
