--- a/scoopday.html
+++ b/scoopday.html
@@ -107,8 +107,8 @@ var randomImage = new Array();
 
 //insert the URL of images in array
 randomImage[0] = "Desktop/eyescreamscoop-extension/DoubleScoop.png";
-randomImage[1] = "Desktop/eyescreamscoop-extension/Shamrock.PNG";
-randomImage[2] = "Desktop/eyescreamscoop-extension/OvertheRainbow.PNG";
+randomImage[1] = "Desktop/eyescreamscoop-extension/Shamrock.png";
+randomImage[2] = "Desktop/eyescreamscoop-extension/OvertheRainbow.png";
 randomImage[3] = "Desktop/eyescreamscoop-extension/TripleScoop.png";
 randomImage[14] = "";
 randomImage[5] = "";
