--- a/scoopday.html
+++ b/scoopday.html
@@ -106,10 +106,10 @@ function getRandomImage() {
 var randomImage = new Array();
 
 //insert the URL of images in array
-randomImage[0] = "Desktop/eyescreamscoop-extension/DoubleScoop.png";
-randomImage[1] = "Desktop/eyescreamscoop-extension/Shamrock.png";
-randomImage[2] = "Desktop/eyescreamscoop-extension/OvertheRainbow.png";
-randomImage[3] = "Desktop/eyescreamscoop-extension/TripleScoop.png";
+randomImage[0] = "greenshamrock";
+randomImage[1] = "overtherainbow";
+randomImage[2] = "hearteyescoop";
+randomImage[3] = "triplescoop";
 randomImage[14] = "";
 randomImage[5] = "";
 
