--- a/scoopday.html
+++ b/scoopday.html
@@ -108,7 +108,7 @@ var randomImage = new Array();
 //insert the URL of images in array
 randomImage[0] = "greenshamrock";
 randomImage[1] = "overtherainbow";
-randomImage[2] = "hearteyescoop";
+randomImage[2] = "file:///Users/eligeleerd/Desktop/eyescreamscoop-extension/hearteyescoop.jpg";
 randomImage[3] = "triplescoop";
 randomImage[14] = "";
 randomImage[5] = "";
