--- a/history1.html
+++ b/history1.html
@@ -61,7 +61,11 @@
 
 body {
   background-color: #FACAF1;
-  font-family: "Brush Script MT", cursive;
+  font-family: 'MyWebFont';
+	src: url(meltdownmf-oeyd-webfont.woff);
+  font-style: normal;
+  font font-weight: 100;
+}
 }
 
 /* The actual timeline (the vertical ruler) */
