--- a/scoopday.html
+++ b/scoopday.html
@@ -125,8 +125,8 @@ div {
   var randomImage = new Array();
   
   //insert the URL of images in array
-  randomImage[0] = "greenshamrock.jpeg";
-  randomImage[1] = "overtherainbow";
+  randomImage[0] = URL("greenshamrock.jpg");
+  randomImage[1] = "overtherainbow.jpg");
   randomImage[2] = "hearteyescoop";
   randomImage[3] = "triplescoop";
   randomImage[14] = "";
