--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	font-family: 'MyWebFont';
 	src: url(meltdownmf-oeyd-webfont.woff);
   font-style: normal;
-  font font-weight: 100;
+  font-weight: 100;
 }
     .dropdown {
       position: relative;
@@ -77,7 +77,7 @@ margin: 20px;
     <img src=
 "Attachment-1.png" 
          alt="Eyescreamscoop Bomb Pop" 
-         align="right">
+         >
 
 
 <div>Access to: 
@@ -90,12 +90,10 @@ margin: 20px;
   div {
     background-color: #FACAF1;
     width: 300px;
-    border: 15px solid #ffffff);
+    border: 15px solid #ffffff;
     padding:50px;
-    margin 20px;
+    
     
   </style>
 
-
 </html>
-
