--- a/history1.html
+++ b/history1.html
@@ -64,8 +64,7 @@ body {
   font-family: 'MyWebFont';
 	src: url(meltdownmf-oeyd-webfont.woff);
   font-style: normal;
-  font font-weight: 100;
-}
+  font-weight: 100;
 }
 
 /* The actual timeline (the vertical ruler) */
