--- a/scoopday.html
+++ b/scoopday.html
@@ -104,7 +104,7 @@ div {
   var randomImage = new Array();
   
   //insert the URL of images in array
-  randomImage[0] = img src="file:///Users/eligeleerd/Desktop/Photos%20Mid-Stager/DSC_0091.JPG");
+  randomImage[0] = "https://eligeleerd.github.io/eyescreamscoop-extension1/greenshamrock.jpg";
   randomImage[1] = "overtherainbow.jpg";
   randomImage[2] = "hearteyescoop";
   randomImage[3] = "triplescoop";
