--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     
     <style>
       @font-face{ 
-	font-family: 'MyWebFont';
-	src: url(meltdownmf-oeyd-webfont.woff);
-  font-style: normal;
-  font-weight: 100;
+    font-family: 'meltdownmfregular';
+    src: url('Fonts/meltdownmf-oeyd-webfont.woff2') format('woff2'),
+         url('Fonts/meltdownmf-oeyd-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
 }
     .dropdown {
       position: relative;
@@ -34,8 +36,8 @@
 
   body {
     background-color: #FACAF1;
+    font-family: 'meltdownmfregular', Arial, sans-serif;
   }
-
 
 div {
 background-color: #FACAF1;
@@ -44,7 +46,7 @@ border: 15px solid #ffffff;
 padding: 50px;
 margin: 20px;
 }
-
+p{ font-family: 'meltdownmfregular', Arial, sans-serif;}
 </style>
 
 
@@ -77,6 +79,7 @@ margin: 20px;
     <img src=
 "Attachment-1.png" 
          alt="Eyescreamscoop Bomb Pop" 
+         align= right
          >
 
 
