--- a/scoopday.html
+++ b/scoopday.html
@@ -105,9 +105,9 @@ div {
   
   //insert the URL of images in array
   randomImage[0] = "https://eligeleerd.github.io/eyescreamscoop-extension1/greenshamrock.jpg";
-  randomImage[1] = "overtherainbow.jpg";
-  randomImage[2] = "hearteyescoop";
-  randomImage[3] = "triplescoop";
+  randomImage[1] = "https://eligeleerd.github.io/eyescreamscoop-extension1/hearteyescoop.jpg";
+  randomImage[2] = "https://eligeleerd.github.io/eyescreamscoop-extension1/overtherainbow.jpg";
+  randomImage[3] = "";
   randomImage[14] = "";
   randomImage[5] = "";
   
