--- a/scoopday.html
+++ b/scoopday.html
@@ -2,6 +2,13 @@
 <html>
   <head>
     <style>
+        @font-face{ 
+    font-family: 'meltdownmfregular';
+    src: url('Fonts/meltdownmf-oeyd-webfont.woff2') format('woff2'),
+         url('Fonts/meltdownmf-oeyd-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+        }
     .dropdown {
       position: relative;
       display: inline-block;
@@ -20,15 +27,9 @@
     .dropdown:hover .dropdown-content {
       display: block;
     }
-    </style>
+    body{font-family: 'meltdownmfregular', Arial, sans-serif;}
     
-<style>
-body {
-  font-family: 'MyWebFont';
-	src: url(meltdownmf-oeyd-webfont.woff);
-  font-style: normal;
-  font-weight: 100;
-}
+
 
 </style>
 
