--- a/upcomingdrops.html
+++ b/upcomingdrops.html
@@ -210,7 +210,7 @@ p{ font-family: 'meltdownmfregular', Arial, sans-serif;}
 
 <div>
 
-  <h2>10th : Hannukah Sale (8 days of 20% all store)</h2> 
+  <h2>December 10th : Hannukah Sale (8 days of 20% all store)</h2> 
   <h2>December 21st : Christmas Sale (3 Days of buy one, get one free)</h2>
 <h2> December 31st : (Whole store sale on New Year's Eve)</h2>
 
