--- a/scoopday.html
+++ b/scoopday.html
@@ -104,7 +104,7 @@ div {
              var imageArray = [  
              {   
                //address URL of the image  
-               src: "",  
+               src: "https://eligeleerd.github.io/eyescreamscoop-extension1/DoubleScoop.png",  
                //size for the image to be display on webpage  
                width: "280",  
                height: "200"  
