--- a/scoopday.html
+++ b/scoopday.html
@@ -76,19 +76,19 @@ div {
        height: "200"  
      },   
      {  
-       src: "https://wi.wallpapertip.com/wsimgs/156-1564365_golden-retriever-puppy-desktop-wallpaper-desktop-wallpaper-puppy.jpg",  
+       src: "https://eligeleerd.github.io/eyescreamscoop-extension1/IMG_7978%20copy.PNG",  
        width: "320",  
-       height: "195"  
+       height: "200"  
      },   
      {  
-       src: "https://wi.wallpapertip.com/wsimgs/156-1564140_free-puppy-wallpapers-for-computer-wallpaper-cave-cute.jpg",  
+       src: "https://eligeleerd.github.io/eyescreamscoop-extension1/Rainbow.png",  
        width: "320",  
-       height: "195"  
+       height: "200"  
      },  
      {  
-       src: "https://wi.wallpapertip.com/wsimgs/156-1566650_cute-puppies-desktop-wallpaper-cute-puppies.jpg",  
-       width: "350",  
-       height: "250"  
+       src: "https://eligeleerd.github.io/eyescreamscoop-extension1/scoop3%20copy.png",  
+       width: "250",  
+       height: "350"  
       } ];  
         
        
